--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
               <div class="card-body row no-gutters align-items-center">
                   <!--end of col-->
                   <div class="col">
-                      <input id="moviename"class="form-control form-control-md form-control-borderless" type="search" placeholder="Type Movie name">
+                      <input  list="brow" id="moviename"class="form-control form-control-md form-control-borderless" type="search" placeholder="Type Movie name">
+                      <datalist id="brow">
+                        <option value="red">
+                        <option value="green">
+                        <option value="yellow">
+                        <option value="blue">
+                   
+                      </datalist>  
                   </div>
                   <!--end of col-->
                   <div class="col-auto">
