--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 
   <script src="assets/jquery/script.js"></script>
 
- 
 </head>
 <body>
-
-
+  <div class="overlay"></div>
+  <div class="se-pre-con"></div>
   <div class="container-fluid">
     <div class="row search-section-inner">
      
